.btn-Remove positioning fix

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -786,9 +786,9 @@ footer {
     }
   }
   .btn-Remove {
-    position: absolute;
-    right: 0;
-    bottom: 0;
+//    position: absolute;
+//    right: 0;
+//    bottom: 0;
   }
   .aboutUs {
     h3 {
