cart qty <a> + removed

--- a/css/style.css
+++ b/css/style.css
@@ -2224,7 +2224,7 @@ textarea {
     padding-right: 6px; }
 
 .btn-Remove {
-  background-color: #d30000;
+  background-color: #595959;
   float: right; }
 
 .btn-addMore {
