cart counter test

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -62,7 +62,7 @@ textarea {
   display: block !important;
 }
 
-.noSelection {
+.noSelection * {
   -webkit-user-select: none; /* Chrome all / Safari all */
   -moz-user-select: none; /* Firefox all */
   -ms-user-select: none; /* IE 10+ */
