--- a/sass/style.scss
+++ b/sass/style.scss
@@ -84,6 +84,7 @@ textarea {
   text-transform: uppercase;
   font-weight: 700;
   border: 1px solid $white;
+  font-family: 'Open Sans', sans-serif;
 }
 .btn{
   @include button;
@@ -111,8 +112,17 @@ textarea {
 
 }
 
+.btn-buy_cat {
+  margin: 0;
+  padding: 10px 8px;
+  background-color: #1FA67A;
+  color: #FFF;
+  border: 0;
+}
+
 .btn-buy {
 }
+
 
 .removeButton{
   text-align: center;
@@ -324,6 +334,11 @@ textarea {
     padding-left: 10%;
     font-family: $fontExo2;
     font-weight: 100;
+  }
+  .buyForm {
+    position: absolute;
+    bottom: 0;
+    right: 0;
   }
 }
 
@@ -747,11 +762,18 @@ footer {
           margin-left: -60px;
         }
       }
+      .buyForm {
+        display: none;
+      }
       &:hover + h3 {
         color: $red;
       }
+      &:hover .buyForm {
+        display: inline-block;
+      }
       &:hover {
         border-color: $red;
+        border-color: $green;
       }
       &:hover .itemName {
         visibility: visible;
